--- a/index.html
+++ b/index.html
@@ -42,10 +42,333 @@
 
 
 
-<body>
+
+<!-- =====================================HEADER====================================  -->
+<header>
+    <div class="container">
+        <!-- NAVBAR  -->
+        <div class="header__navbar">
+
+             <!-- logo  -->
+            <a href="#">
+                <img src="./assets/css/Logo.svg" alt="" class="logo">
+            </a>
+
+                <!-- navbar  -->
+            <div class="header__navbar__box">
+                <a href="" class="header__navbar__box-item" >Home</a>
+                <a href="#service" class="header__navbar__box-item">Service</a>
+                <a href="#about" class="header__navbar__box-item">About</a>
+                <a href="#doctor" class="header__navbar__box-item">Doctor</a>
+            </div>
+
+            <!-- cta  -->
+            <div class="header__navbar__cta">
+                <a href="" class="header__navbar__cta-login ">Log In</a>
+                <a href=""class="header__navbar__cta-signun btn">Sign Up</a>
+            </div>
+        </div>
+        <!-- HERO  -->
+        <section class="header__hero">
+                     <!-- desc  -->
+                <section class="header__hero__desc">
+
+                    <h1>Exceptional dental care for all ages.</h1>
+                    <p>Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+                  <div class="header__hero__desc__cta">
+                    <a href="" class="header__hero__desc__cta-cta btn">Book Online</a>
+                    <a href="tel:0705170905" class="header__hero__desc__cta-call">or call (+84)705170905</a>
+                  </div>
+
+                </section>
+
+                    <!-- img  -->
+                <figure class="header__hero__img">
+                    <img src="./assets/img/imghero1.svg" alt="" class="header__hero__img-1">
+                    <img src="./assets/img/imghero2.svg" alt="" class="header__hero__img-2">
+                </figure>
+
+        </section>
+    </div>
+</header>
+<main>
+
+  <!-- ===================================MAIN================================  -->
+  <!-- =================service============  -->
+  <section id="service" class="service">
+    <div class="container">
+        <h2 class="service__heading">Our Service</h2>
+        <p class="service__desc">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+        <div class="service__row">
+             <!-- img  -->
+            <figure class="service__row_img">
+                   <img src="./assets/img/service1.svg" alt="">
+            </figure>
+            <!-- des  -->
+            <div class="service__row__list">
+                  <ul class="service__row__list__ul">
+                     <!-- item 1  -->
+                    <li class="service__row__list__ul__li1">
+                        <div class="service__row__list__ul__li-item1">
+                            <img src="./assets/img/teeth.svg" alt="">
+                            <h3>Oral Surgery</h3>
+                            <p>Everything you expect and then some. Cleanings, fillings, and x-rays.</p>
+                        </div>
+                    </li>
+                     <!-- item 2  -->
+                    <li class="service__row__list__ul__li2">
+                        <div class="service__row__list__ul__li-item2">
+                            <img src="./assets/img/TEETH2.svg" alt="">
+                            <h3>Wisdom Teeth Removal</h3>
+                            <p>Everything you expect and then some. Cleanings, fillings, and x-rays.</p>
+                        </div>
+                    </li>
+                     <!-- item 3  -->
+                    <li class="service__row__list__ul__li3">
+                        <div class="service__row__list__ul__li-item3">
+                            <img src="./assets/img/TEETH2.svg" alt="">
+                            <h3>Preventative Dentistry</h3>
+                            <p>Everything you expect and then some. Cleanings, fillings, and x-rays.</p>
+                        </div>
+                    </li>
+                  </ul>
+                  <a class="service__row__list-cta" href="">All Service</a>
+            </div>
+
+        </div>
+
+    </div>
+  </section>
+  <!-- =======================HIW============  -->
+  <section class="hiw">
+    <div class="container">
+        <h2 class="hiw__heading">How it works</h2>
+        <p class="hiw__desc">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+        <div class="hiw__box">
+            <!-- box 1  -->
+            <div class="hiw__box-item">
+                <img src="./assets/img/magnifier.svg" alt="">
+                <h3>Search doctors</h3>
+                <p>Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                <a href="">Learn more</a>
+            </div>
+             <!-- box 2  -->
+            <div class="hiw__box-item">
+                <img src="./assets/img/hiwfinddocter.svg" alt="">
+                <h3>Find best doctor</h3>
+                <p>Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                <a href="">Learn more</a>
+            </div>
+            <!-- box 3  -->
+            <div class="hiw__box-item">
+                <img src="./assets/img/hiwfirstaidkid.svg" alt="">
+                <h3>Get treatment</h3>
+                <p>Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                <a href="">Learn more</a>
+            </div>
+        </div>
+    </div>
+  </section>
+  <!-- =============FEATURE========  -->
+  <section id="about" class="feature">
+    <div class="container">
+        <div class="feature__box">
+            <img src="./assets/img/feature1.svg" alt="" class="feature__box-img">
+            <img src="./assets/img/feature2.svg" alt="" class="feature__box-img">
+
+        </div>
+        <div class="feature__desc">
+            <h2>Take back your smile with shine.</h2>
+            <p>If you’re missing multiple teeth due to decay, injury, or the natural aging process, dentures might be the perfect solution.</p>
+             <a href="">Learn More</a>
+        </div>
+    </div>
+  </section>
+  <!-- ==============DOCTOR=========  -->
+  <section id="doctor" class="member">
+    <div class="container">
+        <div class="member__header">
+            <h2 class="member__header__heading">Our virtual dentist</h2>
+            <a class="member__header__cta btn" href="">Meet our dentist</a>
+        </div>
+        <div class="member__box">
+            <!-- box 1  -->
+             <div class="member__box__doc">
+                <img src="./assets/img/doc1.svg" alt="">
+                <h3>Dr. Essence Page</h3>
+                <p>DDS, California - Linda University</p>
+             </div>
+              <!-- box 2  -->
+             <div class="member__box__doc">
+                <img src="./assets/img/doc2.svg" alt="">
+                <h3>Dr. Nguyen Xuan Hy Vong</h3>
+                <p>DDS, California - Linda University</p>
+             </div>
+               <!-- box 3  -->
+             <div class="member__box__doc">
+                <img src="./assets/img/doc3.svg" alt="">
+                <h3>Dr. Essence Page</h3>
+                <p>DDS, California - Linda University</p>
+             </div>
+              <!-- box 4  -->
+             <div class="member__box__doc">
+                <img src="./assets/img/doc4.svg" alt="">
+                <h3>Dr. Essence Page</h3>
+                <p>DDS, California - Linda University</p>
+             </div>
+        </div>
+        <div class="member__control">
+             <!-- previous   -->
+             <button class="member__control-btn">
+            <svg class="member__control-icon" width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.5 1L0.5 6L5.5 11" stroke="#575F66" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </button>
+            <!-- next  -->
+            <button class="member__control-btn">
+                <svg class="member__control-icon" width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.5 1L0.5 6L5.5 11" stroke="#575F66" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
+
+        </div>
+
+    </div>
+</section>
+<!-- ==============phone ============ -->
+<section class="phone">
+    <div class="container">
+        <figure class="phone__app">
+            <img class="phone__app__img" src="./assets/img/phone.svg" alt="">
+        </figure>
+        <div class="phone__desc">
+            <h2>Take back your smile with dentures</h2>
+            <p>If you’re missing multiple teeth due to decay, injury, or the natural aging process, dentures might be the perfect solution.</p>
+            <a href="">
+                <img src="./assets/img/googleplay.svg" alt="">
+            </a>
+            <a href="">
+            <img src="./assets/img/applestore.svg" alt="">
+            </a>    
+        </div>
+    </div>
+</section>
+ <!-- ================== news============  -->
+<section class="news">
+    <section class="container">
+        <section class="news__desc">
+            <h2>Read Latest News & Events.</h2>
+            <a href="">Read All Blog</a>
+        </section>
+        <div class="news__box">
+            <!-- box 1  -->
+            <div class="news__box-img">
+                   <img src="./assets/img/news1.svg" alt="">
+                   <h3>Key Considerations for Regulatory Compliant.</h3>
+                   <p>It’s easy to think about medical care from a narrow perspective. You go to the hospital.</p>
+                   <a href="">Learn More</a>
+            </div>
+            <!-- box 2  -->
+            <div class="news__box-img">
+                <img src="./assets/img/news2.svg" alt="">
+                <h3>What Is Population Health Management?</h3>
+                <p>It’s easy to think about medical care from a narrow perspective. You go to the hospital.</p>
+                <a href="">Learn More</a>
+         </div>
+         <!-- box 3  -->
+         <div class="news__box-img">
+            <img src="./assets/img/news2.svg" alt="">
+            <h3>What Is Population Health Management?</h3>
+            <p>It’s easy to think about medical care from a narrow perspective. You go to the hospital.</p>
+            <a href="">Learn More</a>
+     </div>
+     </div>
+            
+
+    </section>
+
+</section>
+<!-- ==================welcome=============  -->
+<section id="wel" class="welcome">
+    <div class="container">
+        <section class="welcome__desc">
+            <h1 class="welcome__desc-heading">Always welcoming new patients</h1>
+            <p class="welcome__desc-desc">Take control of your dental health and get the personalized care you deserve. Call (541) 772-8846 to  schedule</p>
+            <a class="btn welcom__desc-cta" href="">Appoinment</a>
+        </section>
+    </div>
+</section>
+</main>
+<!-- ============================================footer==============================  -->
+<footer class="footer">
+<div class="container">
+    <div class="footer__box">
+    <!-- row 1  -->
+    <div class="footer__row row-1">
+            <img src="./assets/img/logo.svg" alt="">
+            <p>Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+    </div>
+
+ <!-- row 2  -->
+
+
+    <div class="footer__row row-2">
+        <h2>Support</h2>
+ <ul>
+    <li> <a href=""> Help center</a></li>
+    <li><a href="">Account information</a></li>
+    <li><a href="">About</a></li>
+    <li><a href="">Contact us</a></li>
+ </ul>
+ <h2>Support</h2>
+ <ul>
+    <li><a href="">Help Center</a></li>
+    <li><a href="">Account Information</a></li>
+ </ul>
+    </div>
+
+<!-- row 3  -->
+
+
+    <div class="footer__row row-3">
+        <h2>Support</h2>
+        <ul>
+            <li><a href="">Help Center</a></li>
+            <li><a href="">Account Information</a></li>
+         </ul>
+         <h2>Support</h2>
+         <ul>
+            <li><a href="">Help Center</a></li>
+         </ul>
+
+
+    </div>
 
 
 
+    <!-- row 4  -->
+    <div class="footer__row row-4">
+        <h2>Stay In Touch</h2>
+        <img src="./assets/img/Social.svg" alt="">
+        <h2 class="footer__row-4-h2">Subscribe</h2>
+        <p class="footer__row-4-p2">Subscribe our newsletter for the latest update of Dental care</p>
+        <form  class="footer__form" action="">
+            <input class="footer__btn" type="email" name="email" placeholder="Nhập địa chỉ email">
+            <button class="btn footer__submit" type="submit">Subsribe</button>
+        </form>
+
+
+    </div>
+</div>
+
+
+    <div class="votri">
+          
+    </div>
+
+    <p class="end">2021 GDN. Copyright and All rights reserved ( Nguyễn Xuân Hy Vọng) </p>
+</div>
+</footer>
 
 
 
